# expreccs

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  build_dune_and_opm-flow.bash  build_dune_and_opm-flow_mpi.bash  build_opm-flow_macOS.bash  build_opm-flow_mpi.bash  buildopm.sh  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  about.html  api.html  configuration_file.html  contributing.html  examples.html  expreccs.core.expreccs.html  expreccs.core.html  expreccs.html  expreccs.utils.backcoupling.html  expreccs.utils.html  expreccs.utils.inputvalues.html  expreccs.utils.mapboundaries.html  expreccs.utils.mapproperties.html  expreccs.utils.reg_sit_given_decks.html  expreccs.utils.runs.html  expreccs.utils.writefile.html  expreccs.visualization.html  expreccs.visualization.maps2d.html  expreccs.visualization.plotting.html  expreccs.visualization.reading.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  output_folder.html  py-modindex.html  related.html  search.html  searchindex.js  tccs-13.html
examples/: SIMPLE.DATA  base.toml  base0.toml  base1.toml  base2.toml  base3.toml  base4.toml  example1.toml  example1.txt  example1_back.toml  example1_back.txt  example1_porvproj.toml  example1_porvproj.txt  example1_pres.toml  example1_pres.txt  example1_wells.toml  example1_wells.txt  example2.toml  example2.txt  input.toml  input.txt  interpolation_time.toml  interpolation_time.txt  sandwich.toml  tuning.toml
tccs-13/: README.md  postprocessing.py
tests/: test_0_all_bcs.py  test_1_generic_deck_2d.py  test_2_generic_deck.py  test_3_back_coupling.py  test_4_site_regional.py  test_5_nonregular.py  test_all_bcs.py  test_back_coupling.py  test_generic_deck.py  test_generic_deck_2d.py  (+2 more)
(+176 files in other folders)
